--- a/main.css
+++ b/main.css
@@ -1,8 +1,9 @@
 #main{
-    background-color: rgb(248, 248, 248);
+    background-color: #fff;
     width: 90%;
     text-align: center;
     border-radius: 20px;
+    margin-top: 100px;
     box-shadow: 0 5px 10px 5px rgb(198, 217, 241);
 }
 
