--- a/qna.css
+++ b/qna.css
@@ -1,11 +1,11 @@
 
 #qna {
     display: none;
-    margin-top: 250px;
+    margin-top: 200px;
 }
 
 .qBox {
-    background-color: whitesmoke;
+    background-color: rgb(218, 245, 255);
     text-align: center;
     border-radius: 10px;
     font-size: 18pt;
