--- a/result.css
+++ b/result.css
@@ -1,7 +1,7 @@
 #result {
     display: none;
     background-color: #fff;
-    width: 90%;
+    width: 80%;
     text-align: center;
     border-radius: 20px;
     margin-top: 100px;
@@ -9,15 +9,24 @@
     padding: 0 50px;
 }
 
+#result .title {
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.resultName {
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
 .resultDesc {
-    font-size: 15pt;
+    margin-top: 10px;
+    font-size: 10pt;
 }
 
 #resultImg {
     width: 50%;
 }
 
-.resultName {
-    font-size: 25px;
-}
 
